# rlbench-pi05-waypoint-baseline

./: .gitignore  README.md  pyproject.toml  requirements.txt
manifests/: selected10_fulltask_heuristic_waypoints_train100_val25_test25_from_train450_stratified_20260606.jsonl  selected10_fulltask_heuristic_waypoints_train100_val25_test25_from_train450_stratified_20260606.summary.json
openpi_extensions/: rlbench_waypoint_policy.py
scripts/: compute_norm_stats.sh  convert_selected10_waypoints_to_lerobot.sh  install_openpi_on_hpc.sh  patch_openpi_rlbench_config.sh  setup_env.sh  smoke_lerobot_dataset.sh  train_pi05_waypoint_h1.sh
src/rlbench_pi05_waypoint/: __init__.py  common.py  convert_to_lerobot.py  smoke_lerobot_dataset.py
tools/: patch_openpi_rlbench_config.py
